--- a/web/public/scss/main.scss
+++ b/web/public/scss/main.scss
@@ -147,7 +147,7 @@ html {
             transition: opacity 0.1s;
         }
     
-        #quark-put {
+        #quack-put {
             width: 80px;
             padding: .3rem 0;
             margin: 0;
